--- a/SİTE/deneme.html
+++ b/SİTE/deneme.html
@@ -211,3 +211,4 @@
         <div class="container nav">
             <a class="logo" href="#">Proje Adı</a>
             <h1>AZGIN MUSTAFA</h1>
+            <h1>azgın emre</h1>
